Fixed the sidebar alignment

--- a/frontend/src/pages/Profile/Profile.css
+++ b/frontend/src/pages/Profile/Profile.css
@@ -1,17 +1,3 @@
-#profile-box {
-    display: flex;
-    align-items:center;
-    flex-wrap: wrap;
-    padding-bottom: 3rem;
-    /* background-color: var(--accent-color); */
+#profile-content {
+    float: left;
 }
-
-.items p {
-    font-weight:500;
-}
-
-#profile-box > img {
-    margin: 2rem;
-    border-radius: 10%;
-}
-
